--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "description": "",
   "devDependencies": {
+    "@types/es6-promise": "^0.0.33",
     "@types/vue": "^2.0.0",
     "awesome-typescript-loader": "^3.2.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
