--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "@nju33/vue-firebase",
   "version": "0.0.1",
   "main": "./dist/firebase.js",
+  "types": "./dist/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "dev": "NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
-    "build": "webpack --progress --config webpack.config.build.js",
+    "dev":
+      "NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
+    "build":
+      "webpack --progress --config webpack.config.build.js && tsc -p tsconfig.build.json",
     "prepare": "yarn build"
   },
   "keywords": [],
